--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -7,7 +7,7 @@
             <div class="card-header">
                 <div class="sr-only caption">
                     <span i18n>Tabelle Bodenrichtwertzone</span>
-                    {{ feature.properties.nutzung | nutzung }}
+                    {{ feature.properties?.['nutzung'] | nutzung }}
                 </div>
                 <div class="row"
                      role="row">
@@ -42,7 +42,7 @@
                         </ng-template>
                     </div>
                     <div class="h5 col-md-7 mb-0"
-                         role="cell">{{feature.properties.wnum}}
+                         role="cell">{{feature.properties?.['wnum']}}
                     </div>
                 </div>
             </div>
@@ -58,12 +58,12 @@
                     <dd *ngIf="teilmarkt.value.includes('B')"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.brw | number:'1.0-1'}} &euro; / m&#178;
+                        {{feature.properties?.['brw'] | number:'1.0-1'}} &euro; / m&#178;
                     </dd>
                     <dd *ngIf="teilmarkt.value.includes('LF')"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.brw | number:'1.2-2'}} &euro; / m&#178;
+                        {{feature.properties?.['brw'] | number:'1.2-2'}} &euro; / m&#178;
                     </dd>
                     <!-- Entwicklungszustand (entw) -->
                     <dt class="col-md-5"
@@ -72,39 +72,39 @@
                     </dt>
                     <dd class="col-md-7"
                         role="cell">
-                        {{feature.properties.entw | entwicklungszustand | hyphenate}}
+                        {{feature.properties?.['entw'] | entwicklungszustand | hyphenate}}
                     </dd>
                     <!-- Entwicklungszustandzusatz (verf, verg)-->
-                    <dt *ngIf="feature.properties.verg"
+                    <dt *ngIf="feature.properties?.['verg']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.verg | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.verg"
+                    <dd *ngIf="feature.properties?.['verg']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.verg | verfahrensart | hyphenate}}
+                        {{feature.properties?.['verg'] | verfahrensart | hyphenate}}
                     </dd>
-                    <dt *ngIf="feature.properties.verf"
+                    <dt *ngIf="feature.properties?.['verf']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.verf | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.verf"
+                    <dd *ngIf="feature.properties?.['verf']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.verf | entwicklungszusatz | hyphenate}}
+                        {{feature.properties?.['verf'] | entwicklungszusatz | hyphenate}}
                     </dd>
                     <!-- Beitragsrechtlicher Zustand (beit) -->
-                    <dt *ngIf="feature.properties.beit"
+                    <dt *ngIf="feature.properties?.['beit']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.state | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.beit"
+                    <dd *ngIf="feature.properties?.['beit']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.beit | beitrag | hyphenate}}
+                        {{feature.properties?.['beit'] | beitrag | hyphenate}}
                     </dd>
                     <!-- Nutzung - Art und Ergänzung (nuta, enuta)-->
                     <dt class="col-md-5"
@@ -113,93 +113,93 @@
                     </dt>
                     <dd class="col-md-7"
                         role="cell">
-                        {{feature.properties.nutzung | nutzung | hyphenate}}
+                        {{feature.properties?.['nutzung'] | nutzung | hyphenate}}
                     </dd>
                     <!-- Bauweise oder Anbauart (bauw) -->
-                    <dt *ngIf="feature.properties.bauw"
+                    <dt *ngIf="feature.properties?.['bauw']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.bauw | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.bauw"
+                    <dd *ngIf="feature.properties?.['bauw']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.bauw | bauweise | hyphenate}}
+                        {{feature.properties?.['bauw'] | bauweise | hyphenate}}
                     </dd>
                     <!-- Maß der baulichen Nutzung (bmz, gez, grz, wgfz) -->
-                    <dt *ngIf="feature.properties.bmz"
+                    <dt *ngIf="feature.properties?.['bmz']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.bmz | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.bmz"
+                    <dd *ngIf="feature.properties?.['bmz']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.bmz | number}}
+                        {{feature.properties?.['bmz'] | number}}
                     </dd>
-                    <dt *ngIf="feature.properties.gez"
+                    <dt *ngIf="feature.properties?.['gez']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.gez | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.gez"
+                    <dd *ngIf="feature.properties?.['gez']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.gez }}
+                        {{feature.properties?.['gez'] }}
                     </dd>
-                    <dt *ngIf="feature.properties.grz"
+                    <dt *ngIf="feature.properties?.['grz']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.grz | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.grz"
+                    <dd *ngIf="feature.properties?.['grz']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.grz | number}}
+                        {{feature.properties?.['grz'] | number}}
                     </dd>
-                    <dt *ngIf="feature.properties.wgfz"
+                    <dt *ngIf="feature.properties?.['wgfz']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.wgfz | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.wgfz"
+                    <dd *ngIf="feature.properties?.['wgfz']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.wgfz | number}}
+                        {{feature.properties?.['wgfz'] | number}}
                     </dd>
                     <!-- Merkmale der Land- und forstwirtschaftlichen Flächen (acza, bod, grza) -->
-                    <dt *ngIf="feature.properties.acza"
+                    <dt *ngIf="feature.properties?.['acza']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.acza | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.acza"
+                    <dd *ngIf="feature.properties?.['acza']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.acza | number}}
+                        {{feature.properties?.['acza'] | number}}
                     </dd>
-                    <dt *ngIf="feature.properties.bod"
+                    <dt *ngIf="feature.properties?.['bod']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.bod | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.bod"
+                    <dd *ngIf="feature.properties?.['bod']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.bod | bodenart | hyphenate}}
+                        {{feature.properties?.['bod'] | bodenart | hyphenate}}
                     </dd>
-                    <dt *ngIf="feature.properties.grza"
+                    <dt *ngIf="feature.properties?.['grza']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.grza | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.grza"
+                    <dd *ngIf="feature.properties?.['grza']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.grza | number}}
+                        {{feature.properties?.['grza'] | number}}
                     </dd>
                     <!-- Angaben zum Grundstück (gbrei, flae, gtie) -->
-                    <dt *ngIf="feature.properties.flae"
+                    <dt *ngIf="feature.properties?.['flae']"
                         data-toggle="tooltip"
                         data-placement="bottom"
                         [title]="brzStrings.flae.tooltip | hyphenate"
@@ -208,53 +208,53 @@
                         role="rowheader">
                         {{brzStrings.flae.header | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.flae"
+                    <dd *ngIf="feature.properties?.['flae']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.flae | number}} m&#178;
+                        {{feature.properties?.['flae'] | number}} m&#178;
                     </dd>
-                    <dt *ngIf="feature.properties.gbrei"
+                    <dt *ngIf="feature.properties?.['gbrei']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.gbrei | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.gbrei"
+                    <dd *ngIf="feature.properties?.['gbrei']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.gbrei | number}} m;
+                        {{feature.properties?.['gbrei'] | number}} m;
                     </dd>
-                    <dt *ngIf="feature.properties.gtie"
+                    <dt *ngIf="feature.properties?.['gtie']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.gtie | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.gtie"
+                    <dd *ngIf="feature.properties?.['gtie']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.gtie | number}} m;
+                        {{feature.properties?.['gtie'] | number}} m;
                     </dd>
-                    <dt *ngIf="feature.properties.frei"
+                    <dt *ngIf="feature.properties?.['frei']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.frei | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.frei"
+                    <dd *ngIf="feature.properties?.['frei']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.frei | umlautCorrection | hyphenate}}
+                        {{feature.properties?.['frei'] | umlautCorrection | hyphenate}}
                     </dd>
-                    <dt *ngIf="feature.properties.bem"
+                    <dt *ngIf="feature.properties?.['bem']"
                         class="col-md-5"
                         role="rowheader">
                         {{brzStrings.bem | hyphenate}}
                     </dt>
-                    <dd *ngIf="feature.properties.bem"
+                    <dd *ngIf="feature.properties?.['bem']"
                         class="col-md-7"
                         role="cell">
-                        {{feature.properties.bem | hyphenate}}
+                        {{feature.properties?.['bem'] | hyphenate}}
                     </dd>
                     <!-- Umrechnungsdateien -->
-                    <ng-container *ngFor="let umrechnung of feature.properties.umrechnungstabellendatei">
+                    <ng-container *ngFor="let umrechnung of feature.properties?.['umrechnungstabellendatei']">
                         <!-- [html-validate-disable-next element-permitted-content] -->
                         <dt class="col-md-5"
                             role="rowheader">
@@ -277,7 +277,7 @@
             </div>
         </div>
     </div>
-    <div *ngIf="filteredFeatures[0]"
+    <div *ngIf="filteredFeatures?.[0]"
          class="card"
          role="table">
         <div class="card-header">
@@ -298,23 +298,23 @@
                          i18n-alt
                          alt="Freie Hansestadt Bremen Wappen"
                          src="./assets/logos/bremen_wappen.svg"
-                         *ngIf="features?.features[0].properties.gema === 'Bremerhaven' || features?.features[0].properties.gabe === 'Gutachterausschuss für Grundstückswerte in Bremen'">
+                         *ngIf="features?.features[0].properties?.['gema'] === 'Bremerhaven' || features?.features[0].properties?.['gabe'] === 'Gutachterausschuss für Grundstückswerte in Bremen'">
                     <img width="200px"
                          height="50px"
                          i18n-alt
                          alt="Niedersachsen Wappen"
                          src="./assets/logos/niedersachsen.png"
-                         *ngIf="features?.features[0].properties.gema !== 'Bremerhaven' && features?.features[0].properties.gabe !== 'Gutachterausschuss für Grundstückswerte in Bremen'">
+                         *ngIf="features?.features[0].properties?.['gema'] !== 'Bremerhaven' && features?.features[0].properties?.['gabe'] !== 'Gutachterausschuss für Grundstückswerte in Bremen'">
                     <br><br>
                     <a *ngIf="
                          filteredFeatures[0]"
-                       [href]="filteredFeatures[0].properties.gabe | gagKontaktdaten"
+                       [href]="filteredFeatures[0].properties?.['gabe'] | gagKontaktdaten"
                        target="_blank"
                        rel="noopener noreferrer nofollow"
                        i18n-alt
                        alt="Herausgegeben von"
                        title="Herausgegeben von"
-                       i18n-title>{{ filteredFeatures[0]?.properties.gabe }}</a>
+                       i18n-title>{{ filteredFeatures[0]?.properties?.['gabe'] }}</a>
                     <br><br>
                     <a *ngIf="
                        filteredFeatures[0] && teilmarkt.value.includes('B')"
